--- a/_MOB_paper.bib
+++ b/_MOB_paper.bib
@@ -391,4 +391,30 @@ doi = {https://doi.org/10.1002/j.2330-8516.1985.tb00128.x},
 	techreport       = {https://eeecon.uibk.ac.at/~zeileis/papers/Philipp+Zeileis+Strobl-2016.pdf},
 }
 
+@book{      SPISA:book,
+ year		= {2010},
+  title	= {{Allgemeinbildung in Deutschland -- Erkenntnisse aus dem SPIEGEL Studentenpisa-Test}},
+  editor	= {S. Trepte and M. Verbeet},
+  publisher = {VS Verlag}, 
+  address   = {Wiesbaden},
+}
+
+@manual{raschtree:vignette,
+  title={Using the raschtree function for detecting
+differential item functioning in the {R}asch model},
+  author={Carolin Strobl and Lennart Schneider and Julia Kopf and Achim Zeileis},
+  year={2021},
+  publisher={Vignette of R package \texttt{psychotree}}
+}
+
+@Article{Kopfetal:2015:EPM,
+  author = {J. Kopf and A. Zeileis and C. Strobl},
+  title = {Anchor Selection Strategies for {DIF} Analysis: {R}eview, Assessment, and New Approaches},
+  journal = {Educational and Psychological Measurement},
+  year = {2015},
+  volume = {75},
+  number = {1},
+  pages = {22--56},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
