--- a/Raschtree_MH.Rnw
+++ b/Raschtree_MH.Rnw
@@ -15,7 +15,8 @@ sociodemographic data. In the following we will use only the responses to the ni
 Three possible partitioning variables are considered: \texttt{Gender} (in this data set coded only as male, female, or missing), \texttt{Age} (continuous), and \texttt{Area} (Area of study: Language \& Culture, Law \& Economics, Medicine \& Health, Engineering, Sciences, Pharmacy, Geography, Agriculture \& Nutrition, or Sports). The nine items from the culture scale are scored with 0 (incorrect answer) or 1 (corrct answer). 
 The quiz data have been prepared in a format where the nine items of the culture scale are not stored as individual columns of the data set, but the complete matrix of item responses is stored like a single variable \citep[see][]{raschtree:vignette} under the name \texttt{culture}. This means that we can access the item responses for all items jointly using the name \texttt{culture} in the following R commands. The first few rows of the data set look like this:
 
-\todo[inline]{I suggest that we publish the data set Mirka created with the paper, but don't show her data preprocessing steps (which are in the echo = FALSE chunk above); I usually use load for Rda files, Marjolein uses readRDS, is there an advantage? use the same in both examples}
+\todo[inline]{I suggest that we publish the data set Mirka created with the paper, but don't show her data preprocessing steps (which are in the echo = FALSE chunk above); I usually use load for Rda files, Marjolein uses readRDS, is there an advantage? use the same in both examples.
+Mirka: from what I understand, readRDS is for loading .rds/.rda files with only one r object in it, while load is for .rda files with one or more r object in it. I would opt for .rda, because I think it is more general? }
 
 <<>>=
 load("dat_SPISA.Rda")
@@ -45,28 +46,38 @@ Raschtree_culture <- raschtree(culture ~  Gender + Age + Area,
 
 Once the Rasch tree has been fitted, we can plot it using the standard \texttt{plot} function. The item parameters for the nine culture items are displayed in the end nodes of the tree. However, it is hard to interpret the tree structure because such a large number of splits was created. Moreover, it is hard to tell whether all splits are due to substantial amounts of DIF, or whether some of the splits are due to small DIF effects that only became statistically significant due to the large sample size. 
 
+<<echo = FALSE>>=
+if(!file.exists("SPISA_example/Raschtree.rda")){
+  pdf("raschtree_culture.pdf", width = 36, height = 15)
+  plot(Raschtree_culture)
+  dev.off()
+}
+@
 
-<<fig = TRUE, width = 15, height = 8>>=
+
+<<fig = TRUE, width = 15, height = 8, eval = FALSE>>=
 plot(Raschtree_culture)
 @
 
-\todo[inline]{The are covariate split does not look pretty yet. But I [Mirka] will try to make it more pretty later on.. (reply Caro: yes if possible, and/or make it wider in the pdf?)}
+\begin{figure}[!h]
+\centering
+\includegraphics[width = \textwidth]{raschtree_culture.pdf}
+\end{figure}
 
 To assess whether DIF effects are substantial or negligible, it is possible to use the Mantel-Haenszel DIF effect size measure as an additional stopping criterion. It has three categories (A: negligible, B: moderate, C: large). If none of the items shows DIF in category B or C\footnote{This is the default setting. It can also be changed so that splitting is stopped if no item shows DIF in category C.}, the tree is stopped from growing. 
 At the moment, the R functions for the Mantel-Haenszel stopping criterion and additional visualizations based on the Mantel-Haenszel effect size are available from github. They will also be made available as part of the \texttt{psychotree} package in the future. 
 
 In order to install the functions from the author's github page and make them available in the current R session, use the following two commands. 
- 
-\todo[inline]{Caro an Mirka: don't we need library devtools?}
 
 <<>>=
-devtools::install_github("mirka-henninger/raschtreeMH")
+library(devtools)
+install_github("mirka-henninger/raschtreeMH")
 library("raschtreeMH")
 @
 
-We can use a syntax very similar to that of the original \texttt{raschtree} function, but now we also provide the additional argument \texttt{stopfun}. We want to use the Mantel-Haenszel stopping function (\texttt{stopfun\_mantelhaenszel}) together with iterative purification. ???? and DIF category A as the stopping criterion. \todo{Caro an Mirka: oben steht das wäre eh der default, kann das stopcrit A raus? dann hier im Text und im code} It is also possible to provide other, user defined stopping functions \citep[see][for details]{HennyDeba23}. 
+We can use a syntax very similar to that of the original \texttt{raschtree} function, but now we also provide the additional argument \texttt{stopfun}. We want to use the Mantel-Haenszel stopping function (\texttt{stopfun\_mantelhaenszel}) together with iterative purification. It is also possible to provide other, user defined stopping functions \citep[see][for details]{HennyDeba23}. 
 
-For the purification strategy, there are three options (\texttt{none}, \texttt{2step}, and \texttt{iterative}). Purification means that items which have already been diagnosed with DIF are taken out of the set of so called anchor items. Anchor items are used for aligning the scales of different groups of persons for testing further items for DIF. It is highly recommended to use a purification strategy, because otherwise false positives (i.e., artificial DIF) may occur \citep[cf., e.g.,][and the refereces therein]{DebStrZei:2022:CRC,HennyDeba23,Kopfetal:2015:EPM}. In two-step purification, a new sum score without the items that were diagnosed with DIF in step 1 is computed for the final DIF analysis in step 2. When using iterative purification, this process is repeated until two runs yield the same DIF items or until a maximum value of iterations is reached. \todo{Mirka bitte diesen ganzen Absatz besonders gut korrekturlesen}
+For the purification strategy, there are three options (\texttt{none}, \texttt{2step}, and \texttt{iterative}). Purification means that items which have already been diagnosed with DIF are taken out of the set of so called anchor items. Anchor items are used for aligning the scales of different groups of persons for testing further items for DIF. It is highly recommended to use a purification strategy, because otherwise false positives (i.e., artificial DIF) may occur \citep[cf., e.g.,][and the references therein]{DebStrZei:2022:CRC,HennyDeba23,Kopfetal:2015:EPM}. In two-step purification, a new sum score without the items that were diagnosed with DIF in step 1 is computed for the final DIF analysis in step 2. When using iterative purification, this process is repeated until two runs yield the same DIF items or until a maximum value of iterations is reached. \todo{Mirka bitte diesen ganzen Absatz besonders gut korrekturlesen}
 The final set of anchor items for each group comparison, which results from the purification, is also used in the tree plots with color coding for DIF items displayed below. 
 
 
@@ -74,8 +85,7 @@ The final set of anchor items for each group comparison, which results from the 
 if(!file.exists("SPISA_example/Raschtree_MH_culture.rda")){
   Raschtree_MH_culture <- raschtree(culture ~  Gender + Age + Area, 
                                     data = dat_SPISA, 
-                                    stopfun= stopfun_mantelhaenszel(purification = "iterative",
-                                                                    stopcrit = "A"))
+                                    stopfun= stopfun_mantelhaenszel(purification = "iterative"))
   save(Raschtree_MH_culture, file = "SPISA_example/Raschtree_MH_culture.rda")
 }
 load("SPISA_example/Raschtree_MH_culture.rda")
@@ -85,8 +95,7 @@ load("SPISA_example/Raschtree_MH_culture.rda")
 Raschtree_MH_culture <- raschtree(culture ~  Gender + Age + Area, 
                                   data = dat_SPISA, 
                                   stopfun= stopfun_mantelhaenszel(
-                                    purification = "iterative",
-                                    stopcrit = "A"))
+                                    purification = "iterative"))
 @
 
 For technical reasons, the information about the Mantel-Haenszel effect size and classification is not saved in the tree object itself, but has to be added afterwards using the \texttt{add\_mantelhaenszel} function. 
